src/objects/Test_Alter__c.object
<CustomObject>
    <fields>
        <fullName>Test_Field_Three__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Field Three</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Field_Two__c</fullName>
        <label>Test Field Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Alter</label>
    <nameField>
        <label>Test Alter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Alter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>